<resources>
    <string name="app_name">Lab1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="addButton">+</string>
    <string name="subButton">-</string>
    <string name="mulButton">*</string>
    <string name="divButton">/</string>
    <string name="textviewNumber1">Liczba 1</string>
    <string name="textviewNumber2">Liczba 2</string>
    <string name="textviewResult">Wynik</string>
    <string name="piButton">Policz liczbę PI</string>
</resources>